# nuces-graph

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  configure.ac  configure.sh  doxygen.conf
.github/workflows/: static.yml
examples/llvm_callgraph/: Makefile.am  callgraph.c  dummy.c  dummy2.c  test_cases.c
include/: nucesGraph.h
src/: Makefile.am  clique.c  display.c  generate.c  metrics.c  metrics_sw.c  operations.c  paths.c  util.c  utilmatrix.c
tests/: G.graphml  G.tex  Makefile.am  P.tex  binaryops.c  callgraphs.c  clique.c  crossproduct.c  dotimport.c  eccentricity.c  generateGraphs.c  glpk.c  randomTree.c  shortestPath.c  similarity.c  spectral.c  visual.c
